<resources>
    <string name="app_name">CoraCão</string>
    <string name="action_settings">"Settings"</string>
    <string name="banner_ad_unit_id_inicial">"ca-app-pub-2051234629138297/2172471167"</string>
    <string name="tela_principal_saudacao">Hello! Welcome to App ONG Abrigo Coracão.</string>
    <string name="Texto_inicial">"Here you can meet our peludinhos awaiting a family, with the possibility to filter the search according to the desired characteristics. "</string>
    <string name="texto_inicial_dois">"You can also learn more about ONG: how to help, learn about our products, partners, upcoming events and contact us."</string>
    <string name="clicar">"Click the menu to navigate."</string>
    <string name="btnTelaAbertura">"Peludinhos for Adoption!"</string>
    <string name="erro_conexao">"Some problem occurred in your connection!"</string>
    <string name="erro_sem_eventos_inicio">"We did not find any event at the moment! : - /"</string>
    <string name="erro_sem_eventos">"Your query returned no event! : - /"</string>
    <string name="wifi_ligado">"WIFI On!"</string>
    <string name="alert_wifi_titulo">"WARNING!"</string>
    <string name="alert_wifi_mensagem">"You are not connected! Some features will no longer work!"</string>
    <string name="alert_wifi_botao_ok">"Desire Connect Now!"</string>
    <string name="tela_detalhe_pet_nome">"Name"</string>
    <string name="tela_detalhe_pet_idade">"Age"</string>
    <string name="tela_detalhe_pet_sexo">"Sex"</string>
    <string name="tela_detalhe_pet_porte">"Size Rating"</string>
    <string name="tela_detalhe_pet_temperamento">"Temperament"</string>
    <string name="tela_detalhe_pet_historia">"History"</string>
    <string name="classe_evento_adapter_titulo">"job Title"</string>
    <string name="classe_evento_adapter_descricao">"Description "</string>
    <string name="classe_evento_adapter_data_evento">"Date Event"</string>
    <string name="classe_evento_adapter_hora_inicio">"Start time"</string>
    <string name="classe_evento_adapter_hora_termino">"Time Ending"</string>
    <string name="classe_evento_adapter_tipo_evento">"Type Event"</string>
    <string name="classe_pet_adapter_porte">"Size Rating"</string>
    <string name="classe_pet_adapter_ano">"30 Years old"</string>
    <string name="classe_pet_adapter_ano_nasc">"Year b."</string>
    <string name="classe_pet_adapter_nome">"Name"</string>
    <string name="classe_pet_adapter_dados_pet_escolhido">"Furry chosen data"</string>
    <string name="classe_pet_adapter_temperamento">"Temperament"</string>
    <string name="classe_pet_adapter_padrinho">"Hairy waiting godfather"</string>
    <string name="menu_tela_principal">"Home screen"</string>
    <string name="menu_eventos">"Events"</string>
    <string name="menu_cadastro_pets">"Register"</string>
    <string name="menu_consulta_pets">"Our Furry"</string>
    <string name="menu_lojavirtual">"Our products"</string>
    <string name="menu_entrada">"Input"</string>
    <string name="menu_saida">"Output"</string>
    <string name="menu_como_ajudar">"Be a Volunteer"</string>
    <string name="menu_doacao">"Make A Donation"</string>
    <string name="menu_docao_mensal">"Monthly donation"</string>
    <string name="menu_apadrinhe_um_peludo">"Sponsor one Hairy"</string>
    <string name="menu_historia">"History of ONG"</string>
    <string name="menu_parceiros">"Partners"</string>
    <string name="menu_contato">"Contact"</string>
    <string name="menu_sobre">"About"</string>
    <string name="menu_sair">"Get out"</string>
    <string name="title_activity_cadastro_animal">"CadastroAnimal"</string>
    <string name="cadastro_animal_codigo">"Code"</string>
    <string name="cadastro_animal_nome">"Name"</string>
    <string name="cadastro_animal_idade">"Age"</string>
    <string name="cadastro_animal_sexo">"Sex"</string>
    <string name="cadastro_animal_tipo">"Type"</string>
    <string name="cadastro_animal_temperamento">"Temperament"</string>
    <string name="cadastro_animal_porte">"Size Rating"</string>
    <string name="cadastro_animal_status">"Status "</string>
    <string name="cadastro_animal_cadastrar">"Register"</string>
    <string name="cadastro_animal_buscar">"Search Image"</string>
    <string name="cadastro_animal_tirar">"Take a picture"</string>
    <string-array name="arrayTipoConsultaEvento">
        <item>"All"</item>
        <item>"Task force"</item>
        <item>"Thrift store"</item>
        <item>"Bath / Tosa"</item>
        <item>"Action among friends/raffle"</item>
        <item>"Serenade Lit"</item>
        <item>"Fair Adoption"</item>
        <item>"Beneficent tea"</item>
        <item>"Carinhosos volunteers"</item>
        <item>"Amornique"</item>
        <item>"Bath"</item>
        <item>"read"</item>
        <item>"CONFRATERNIZATION"</item>
        <item>"Others"</item>
    </string-array>
    <string-array name="arrayTipoConsultaPet">
        <item>"All"</item>
        <item>"Canine"</item>
        <item>"Feline"</item>
    </string-array>
    <string-array name="arrayPorteConsultaPet">
        <item>"All"</item>
        <item>"S"</item>
        <item>"S / M"</item>
        <item>"M"</item>
        <item>"M / L"</item>
        <item>"L"</item>
    </string-array>
    <string-array name="arrayIdadeConsultaPet">
        <item>"All"</item>
        <item>"Cub"</item>
        <item>"Adult"</item>
        <item>"Elderly "</item>
    </string-array>
    <string-array name="arraySexoConsultaPet">
        <item>"All"</item>
        <item>"CORE:"</item>
        <item>"Female"</item>
    </string-array>
    <string-array name="arrayTipo">
        <item>"Canine"</item>
        <item>"Feline"</item>
    </string-array>
    <string-array name="arraySexo">
        <item>"Male"</item>
        <item>"Female"</item>
    </string-array>
    <string-array name="arrayStatus">
        <item>"The ONG"</item>
        <item>"Adopted"</item>
        <item>"In Temporary Home"</item>
    </string-array>
    <string-array name="arrayPorte">
        <item>"S"</item>
        <item>"S / M"</item>
        <item>"M"</item>
        <item>"M / L"</item>
        <item>"L"</item>
    </string-array>
    <string-array name="arrayCastrado">
        <item>"Yes"</item>
        <item>"No"</item>
    </string-array>
    <string-array name="arrayTemperamento">
        <item>"Quiet overall"</item>
        <item>"Docile with people"</item>
        <item>"Docile with animals"</item>
    </string-array>
    <string name="title_activity_cadastro_pet">"Registration Hairy"</string>
    <string name="title_activity_consulta_pet">"Our Furry"</string>
    <string name="title_activity_pet_detalhe">"Hairy Information"</string>
    <string name="title_activity_detalhe_pet">"Hairy Information"</string>
    <string name="title_activity_como_ajudar">"Be a Volunteer"</string>
    <string name="title_activity_historia">"History"</string>
    <string name="title_activity_eventos">"Events"</string>
    <string name="title_activity_parceiros">"Partners"</string>
    <string name="title_activity_doacao">"Donation"</string>
    <string name="title_activity_sobre">"About"</string>
    <string name="tela_consulta_saudacao">"Wait! We are by downloading our furry"</string>
    <string name="tela_consulta_saudacao_finished">"Find your new companion!"</string>
    <string name="tela_consulta_tv_tipo">"Species"</string>
    <string name="tela_consulta_tv_sexo">"Sex"</string>
    <string name="tela_consulta_tv_porte">"Size Rating"</string>
    <string name="tela_consulta_tv_idade">"Age"</string>
    <string name="tela_consulta_toast_consulta_invalida">"Your query returned no Furry! : - /"</string>
    <string name="tela_consulta_toast_consulta_inicio">"We did not find any hairy in our Base! : - /"</string>
    <string name="tela_consulta_saudacao_eventos">"We are by downloading our events"</string>
    <string name="tela_consulta_saudacao_eventos_finished">"Events calendar"</string>
    <string name="tela_consulta_eventos_tipo">"Event Filter"</string>
    <string name="tela_evento_toast_consulta_invalida">"Your query returned no event!"</string>
    <string name="chVerResumo">"View List"</string>
    <string name="tvDepositoTrans">"Deposit or Transfer Bank Account:"</string>
    <string name="tvContas">"You can collaborate with the Association 101 viralatas by deposit or bank transfer in one of the following accounts:"</string>
    <string name="tvBancoBrasilTrans">"BRAZIL BANK: Agency 5653-7 / 1248-3 Account"</string>
    <string name="tvBancoBanrisulTrans">"BANRISUL: 0982 Agency / Account: 06.060510.0-5"</string>
    <string name="tvBancoCaixaTrans">"CHEST: Agency 3457 / Operation: 022 / Savings Account: 4-8"</string>
    <string name="tvSistemasOnline">"By PagSeguro"</string>
    <string name="tvSistemas">"You can hold your contribution by debit, online transfer or credit card of any value."</string>
    <string name="tvVoluntariado">"VOLUNTEERING"</string>
    <string name="tvAreasVoluntariado">"The Family 101 viralatas account, currently with more than 350 animals. So it would be virtually impossible to maintain the structure running without many hands to help several paws. Our volunteers can collaborate in several areas:"</string>
    <string name="tvAreasVoluntariado1">"Sponsorship"</string>
    <string name="tvAreasVoluntariado2">"Feeding Hairy"</string>
    <string name="tvAreasVoluntariado3">"Cleaning kennels and catteries"</string>
    <string name="tvAreasVoluntariado4">"Adoptions"</string>
    <string name="tvAreasVoluntariado5">"Events"</string>
    <string name="tvAreasVoluntariado6">"Communications"</string>
    <string name="tvAreasVoluntariado7">"Commercial"</string>
    <string name="tvAreasVoluntariado8">"Walk with Animals"</string>
    <string name="tvAreasVoluntariado9">"Intermediate Care Facility"</string>
    <string name="tvAreasVoluntariado10">"Maintenance of Infrastructure NGO"</string>
    <string name="tvAreasVoluntariado11">"Among others"</string>
    <string name="btnVoluntariadoQueroVoluntariar">"I want to Volunteer!"</string>
    <string name="tvDoacao">Donation of Products and Items</string>
    <string name="so_nomeapp">App Abrigo CoraCão</string>
    <string name="so_versao">Version 1.0</string>
    <string name="so_desenvolvedor">Top Developer\nCluster - Thiago Cury</string>
    <string name="so_data">Year 2017</string>
    <string name="so_site">Site: www.thiagocury.eti.br</string>
    <string name="so_contato">Contact: contato@thiagocury.eti.br</string>
    <string name="tvDesenvolvedoresParceiros">Partners developers</string>
    <string name="tvParceiro1">Alice Longhi</string>
    <string name="tvParceiro2">Diego Xavier</string>
    <string name="tvParceiro3">Lucas Cruz Wottrich</string>
    <string name="tvParceiro4">Marcelo Vieira Esser</string>
    <string name="tvParceiro5">Mauricio Ray</string>
    <string name="tvParceiro6"></string>
    <string name="tvTituloMensal">"Become a Monthly Donor!"</string>
    <string name="tvTextoMensal">"Debited donation credit card every month automatically. Now you can make your donation without worrying about remembering every month! By purchasing one of the monthly donation plans, you collaborate every month with the chosen quota, whose amount will be charged to your credit card automatically for 12 months."</string>
    <string name="tvTituloMensal2">"Choose your monthly quota:"</string>
    <string name="tvDoar5">"Click here to donate R$ 5.00 (PagSeguro) for 12 months."</string>
    <string name="tvDoar10">"Click here to donate R$ 10.00 (PagSeguro) for 12 months."</string>
    <string name="tvDoar25">"Click here to donate R$ 25.00 (PagSeguro) for 12 months."</string>
    <string name="tvDoar30">"Click here to donate R$ 30.00 (PagSeguro) for 12 months."</string>
    <string name="tvDoar50">"Click here to donate R$ 50.00 (PagSeguro) for 12 months."</string>
    <string name="tvDoar75">"Click here to donate R$ 75.00 (PagSeguro) for 12 months."</string>
</resources>