<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey300"
    tools:context="thiagocury.eti.br.abrigocoracao.FragSobre">

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/linear_marg">

            <ImageView
                android:layout_width="@dimen/sobre_largura"
                android:layout_height="@dimen/sobre_altura"
                android:id="@+id/imageView3"
                android:layout_marginBottom="@dimen/esp_img"
                android:background="@drawable/ic_logotipo"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:text="@string/so_nomeapp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView2"
                android:layout_margin="@dimen/esp_img"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="@dimen/texto"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/so_versao"
                android:id="@+id/textView3"
                android:layout_margin="@dimen/esp_img"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:textColor="@color/black"
                android:textSize="@dimen/texto" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/so_data"
                android:id="@+id/textView5"
                android:layout_margin="@dimen/esp_img"
                android:textAlignment="center"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/black"
                android:textSize="@dimen/texto" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/so_desenvolvedor"
                android:id="@+id/textView4"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:layout_margin="@dimen/esp_img"
                android:textColor="@color/black"
                android:textSize="@dimen/texto" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/so_site"
                android:id="@+id/textView6"
                android:layout_margin="@dimen/esp_img"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="@dimen/texto" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/so_contato"
                android:id="@+id/textView7"
                android:layout_margin="@dimen/esp_img"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="@dimen/texto" />

            <ImageView
                android:layout_width="@dimen/width_cluster"
                android:layout_height="@dimen/height_cluster"
                android:id="@+id/imageView2"
                android:layout_marginTop="@dimen/espacamento"
                android:layout_gravity="center_horizontal|center_vertical"
                android:background="@drawable/logo_colorido"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/tvDesenvolvedoresParceiros"
                android:id="@+id/tvDesenvolvedoresParceiros"
                android:textSize="@dimen/texto"
                android:layout_margin="@dimen/espacamento"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/tvParceiro1"
                android:id="@+id/tvParceiro1"
                android:textSize="@dimen/texto"
                android:layout_margin="@dimen/espacamento"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="@dimen/texto"
                android:text="@string/tvParceiro2"
                android:id="@+id/tvParceiro2"
                android:layout_margin="@dimen/espacamento"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/tvParceiro3"
                android:id="@+id/tvParceiro3"
                android:textSize="@dimen/texto"
                android:layout_margin="@dimen/espacamento"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/tvParceiro4"
                android:id="@+id/tvParceiro4"
                android:textSize="@dimen/texto"
                android:layout_margin="@dimen/espacamento"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/tvParceiro5"
                android:id="@+id/tvParceiro5"
                android:textSize="@dimen/texto"
                android:layout_margin="@dimen/espacamento"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/tvParceiro6"
                android:id="@+id/tvParceiro6"
                android:textSize="@dimen/texto"
                android:layout_margin="@dimen/espacamento"
                android:paddingBottom="@dimen/marg_campo"
                android:layout_gravity="center_horizontal" />

        </LinearLayout>
    </ScrollView>

</FrameLayout>
