<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey300"
    tools:context="thiagocury.eti.br.abrigocoracao.FragComoAjudar">

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/linear_marg">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/marg_lin_top"
                android:id="@+id/Voluntariado"
                android:background="@drawable/borda_caixa">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/tvVoluntariado"
                    android:id="@+id/tvVoluntariado"
                    android:background="@color/colorPrimary"
                    android:textAlignment="center"
                    android:paddingTop="@dimen/padding_ajudar"
                    android:layout_gravity="center"
                    android:paddingBottom="@dimen/padding_ajudar"
                    android:textColor="@color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tvAreasVoluntariado"
                    android:layout_marginTop="@dimen/marg_texto_top"
                    android:textAlignment="center"
                    android:textSize="@dimen/texto_um"
                    android:id="@+id/tvAreasVoluntariado" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tvAreasVoluntariado1"
                    android:layout_marginTop="@dimen/marg_texto_top"
                    android:textAlignment="center"
                    android:layout_gravity="center"
                    android:textSize="@dimen/texto_um"
                    android:id="@+id/tvAreasVolutariado1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tvAreasVoluntariado2"
                    android:layout_marginTop="@dimen/marg_texto_top"
                    android:textAlignment="center"
                    android:layout_gravity="center"
                    android:textSize="@dimen/texto_um"
                    android:id="@+id/tvAreasVolutariado2" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tvAreasVoluntariado3"
                    android:layout_marginTop="@dimen/marg_texto_top"
                    android:textAlignment="center"
                    android:layout_gravity="center"
                    android:textSize="@dimen/texto_um"
                    android:id="@+id/tvAreasVolutariado3" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tvAreasVoluntariado4"
                    android:layout_marginTop="@dimen/marg_texto_top"
                    android:textAlignment="center"
                    android:layout_gravity="center"
                    android:textSize="@dimen/texto_um"
                    android:id="@+id/tvAreasVolutariado4" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tvAreasVoluntariado5"
                    android:layout_marginTop="@dimen/marg_texto_top"
                    android:textAlignment="center"
                    android:layout_gravity="center"
                    android:textSize="@dimen/texto_um"
                    android:id="@+id/tvAreasVolutariado5" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tvAreasVoluntariado6"
                    android:layout_marginTop="@dimen/marg_texto_top"
                    android:textAlignment="center"
                    android:layout_gravity="center"
                    android:textSize="@dimen/texto_um"
                    android:id="@+id/tvAreasVolutariado6" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tvAreasVoluntariado7"
                    android:layout_marginTop="@dimen/marg_texto_top"
                    android:textAlignment="center"
                    android:layout_gravity="center"
                    android:textSize="@dimen/texto_um"
                    android:id="@+id/tvAreasVolutariado7" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tvAreasVoluntariado8"
                    android:layout_marginTop="@dimen/marg_texto_top"
                    android:textAlignment="center"
                    android:layout_gravity="center"
                    android:textSize="@dimen/texto_um"
                    android:id="@+id/tvAreasVolutariado8" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tvAreasVoluntariado9"
                    android:layout_marginTop="@dimen/marg_texto_top"
                    android:textAlignment="center"
                    android:layout_gravity="center"
                    android:textSize="@dimen/texto_um"
                    android:id="@+id/tvAreasVolutariado9" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tvAreasVoluntariado10"
                    android:layout_marginTop="@dimen/marg_texto_top"
                    android:textAlignment="center"
                    android:layout_gravity="center"
                    android:textSize="@dimen/texto_um"
                    android:id="@+id/tvAreasVolutariado10" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tvAreasVoluntariado11"
                    android:layout_marginTop="@dimen/marg_texto_top"
                    android:textAlignment="center"
                    android:layout_gravity="center"
                    android:textSize="@dimen/texto_um"
                    android:id="@+id/tvAreasVolutariado11" />

                <!-- <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tvVolutariadoInteresse"
                    android:layout_marginTop="@dimen/marg_texto_top"
                    android:textAlignment="center"
                    android:textSize="@dimen/texto_um"
                    android:id="@+id/tvVoluntariadoInteresse" /> -->

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/moip_marg_larg"
                    android:layout_marginRight="@dimen/moip_marg_larg"
                    android:layout_marginTop="@dimen/marg_campo"
                    android:layout_marginBottom="@dimen/marg_campo"
                    android:textColor="@color/white"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:id="@+id/btnVoluntariadoQueroVoluntariar"
                    android:background="@drawable/borda_botao"
                    android:text="@string/btnVoluntariadoQueroVoluntariar" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</FrameLayout>
